fix header video on mobile

--- a/src/ui/components/PageBuiltToLast/stylesheet.css
+++ b/src/ui/components/PageBuiltToLast/stylesheet.css
@@ -10,10 +10,8 @@
 }
 
 .video {
-  object-fit: cover;
-  position: absolute;
-  top: 0;
-  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .header-content {
@@ -21,6 +19,19 @@
   transform: translateY(-50%);
   position: absolute;
   width: 100%;
+}
+
+@media (max-width: 887px) {
+  .video {
+    width: auto;
+    height: auto;
+    transform: translateX(-50%);
+  }
+
+  .video-header {
+    margin-top: resolve('header-content');
+    margin-top: 0;
+  }
 }
 
 .h1,
